# text-categorization-using-nli-fallback

./: .gitignore  Makefile  README.md  api.py  categories.json  config.yaml  evaluate_hybrid.py  nli_fallback.py  pyproject.toml  train.py
.github/workflows/: tests.yml
examples/: request.json
tests/: conftest.py  test_api_categories.py  test_api_config.py  test_api_routes.py  test_nli_loading.py  test_predict.py  test_train_data.py
