[project]
name = "distilbert-onnx-demo"
version = "0.1.0"
description = "Fine-tune DistilBERT on Reuters, export to ONNX, and serve with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "scikit-learn",
    "beautifulsoup4",
    "lxml",
    "accelerate",
    "optimum[onnxruntime]",
    "fastapi",
    "uvicorn",
    "pyyaml",
]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "pytest-cov",
]
